Fix spacing issue in plus icon #468

--- a/blocks/v2-content-carousel/v2-content-carousel.css
+++ b/blocks/v2-content-carousel/v2-content-carousel.css
@@ -205,9 +205,11 @@ ul.v2-content-carousel__arrowcontrols {
 
 .v2-content-carousel.interactive .icon-plus {
   color: var(--c-main-black);
+  height: 48px;
   position: absolute;
   right: 24px;
   top: 24px;
+  width: 48px;
 }
 
 .v2-content-carousel.interactive .icon-plus svg {
